--- a/style.css
+++ b/style.css
@@ -113,3 +113,49 @@ footer {
   font-size: 0.9em;
   margin-top: 40px;
 }
+
+
+.modo-contraste {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background: #222;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.modo-contraste:hover {
+  background: #000;
+}
+
+
+body.dark-mode {
+  background-color: #000;
+  color: #fff;
+}
+
+body.dark-mode header,
+body.dark-mode footer {
+  background-color: #111;
+  color: #fff;
+}
+
+body.dark-mode nav button {
+  background-color: #fff;
+  color: #000;
+}
+
+body.dark-mode .card {
+  background-color: #222;
+  color: #fff;
+  border: 1px solid #555;
+}
+
+body.dark-mode input,
+body.dark-mode label {
+  color: #fff;
+  background-color: #333;
+  border-color: #666;
+}
